syntax = "proto3";

option csharp_namespace = "CookingMedia.Recipe.Api.Client";
import "model.proto";
package greet;

service IngredientController {
	rpc Get (GetIngredientRequest) returns (IngredientModel);
}

message GetIngredientRequest {
	int32 id = 1;
}